tests/ui/issues/issue-20433.stderr
error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/issue-20433.rs:6:18
   |
LL |     fn iceman(c: Vec<[i32]>) {}
   |                  ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
note: required by an implicit `Sized` bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
