tests/ui/issues/issue-20433.rs
fn main() {}

struct The;

impl The {
    fn iceman(c: Vec<[i32]>) {}
    //~^ ERROR the size for values of type
}
